--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -19,9 +19,19 @@
             }
         }
         &_second{
+            
             &__title{
+                color: #5C5C5C;
                 font-weight: 100;
-                font-size: 16px;
+                font-size: 14px;
+            }
+        }
+        &_third{
+            padding: 30px 0;
+            display: flex;
+            align-items: center;
+            &__btn{
+                font-size: 20px;
             }
         }
     }
