--- a/src/pages/start/Start.scss
+++ b/src/pages/start/Start.scss
@@ -10,13 +10,16 @@
         justify-content: center;
         align-items: center;
         &_title{
+            font-size: 20px;
             font-weight: 700;
         }
         &_subtitle{
+            font-size: 20px;
             padding: 30px 0;
             
         }
         &_button{
+            font-size: 20px;
             max-width: 175px;
             max-height: 90px;
             box-sizing: border-box;
