--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -28,10 +28,16 @@
         }
         &_third{
             padding: 30px 0;
-            display: flex;
-            align-items: center;
-            &__btn{
+            
+            
+            &__option{
+                
+                display: flex;
+                cursor: pointer;
                 font-size: 20px;
+            }
+            &__option:hover .arrow{
+                display: inline-block;
             }
         }
     }
