--- a/src/graphics/styles/style.scss
+++ b/src/graphics/styles/style.scss
@@ -1,5 +1,5 @@
 @import './reboot.scss';
-
+@import './anim.scss';
 .app {
   position: relative;
   background-color: #1b1b1b;
@@ -7,17 +7,3 @@
   min-height: 100vh;
 }
 
-.page-enter {
-  opacity: 0;
-}
-.page-enter-active {
-  opacity: 1;
-  transition: opacity 0.5s;
-}
-.page-exit {
-  opacity: 1;
-}
-.page-exit-active {
-  opacity: 0;
-  transition: opacity 0.5s;
-}
