--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -48,3 +48,56 @@
         }
     }
 }
+
+@media (max-width: 800px){
+    .main {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        &-text {
+            width: 100%;
+            padding: 0 15%;
+            display: flex;
+            flex-direction: column;
+            overflow-wrap: break-word; /* Перенос длинных слов */
+            
+            &_first {
+                padding: 30px 0;
+                
+                &__title {
+                    font-weight: 700;
+                    font-size: 16px;
+                }
+                
+                &__subtitle {
+                    font-size: 16px;
+                    font-weight: 100;
+                }
+            }
+            
+            &_second {
+                &__title {
+                    color: #5C5C5C;
+                    font-weight: 100;
+                    font-size: 12px;
+                }
+            }
+            
+            &_third {
+                padding: 30px 0;
+                
+                &__option {
+                    display: flex;
+                    cursor: pointer;
+                    font-size: 16px;
+                }
+                
+                &__option:hover .arrow {
+                    display: inline-block;
+                }
+            }
+        }
+    }
+  }
