--- a/src/pages/preloader/Preloader.scss
+++ b/src/pages/preloader/Preloader.scss
@@ -17,3 +17,24 @@
         }
     }
 }
+@media (max-width: 800px){
+    .preloader{
+        min-height: 100vh;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 0 30px;
+        &-text{
+            
+            font-weight: 700;
+            &_first{font-size: 16px;}
+            &_second{
+                padding: 50px 0;
+                font-size: 16px;
+            }
+            &_third{
+                font-size: 16px;
+            }
+        }
+    }
+  }
