--- a/src/pages/start/Start.scss
+++ b/src/pages/start/Start.scss
@@ -32,3 +32,37 @@
         }
     }
 }
+@media (max-width: 800px){
+    .start{
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &-area{
+            font-weight: 300;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            &_title{
+                font-size: 16px;
+                font-weight: 700;
+            }
+            &_subtitle{
+                font-size: 16px;
+                padding: 30px 0;
+                
+            }
+            &_button{
+                font-size: 16px;
+                box-sizing: border-box;
+                border: 5px solid rgb(255, 255, 255);
+                cursor: pointer;
+            }
+            &_button:hover{
+                color: #1b1b1b;
+                background-color: white;
+            }
+        }
+    }
+  }
