--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -3,30 +3,35 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
 
-  &-container {
-    width: 600px;
-    height: 600px;
-    display: grid;
-    grid-template-areas:
-      "box1 box1 box2"
-      "box3 box4 box2"
-      "box3 box4 box5"
-      "box6 box6 box6"; // Объединяем box4 и box5 в один box4
-    gap: 10px;
-    margin: 0 auto;
-    overflow: hidden;
+.about-container {
+  width: 95vw;
+  height: 95vh;
+  display: grid;
+  grid-template-areas:
+    "box1 box2 box2 box2"
+    "box3 box4 box5 box5"
+    "box6 box4 box7 box8"
+    "box6 box9 box7 box8";
+  gap: 20px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 20px;
 
-    &__box {
-      border-radius: 25px;
-      cursor: pointer;
-      background-color: #2c2c2c;
-      transition: background-color 0.3s ease, transform 0.3s ease;
+  &__box {
+    border-radius: 25px;
+    background-color: #2C2C2C;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 
-      &:hover {
-        background-color: #1abc9c;
-        transform: scaleX(1.02);
-      }
+    &:hover {
+      transform: scale(1.02);
     }
   }
 }
@@ -44,29 +49,44 @@
 }
 
 .box4 {
-  grid-area: box4; // Теперь занимает место и box4, и box5
+  grid-area: box4;
 }
+
 .box5 {
-  grid-area: box5; // Теперь занимает место и box4, и box5
+  grid-area: box5;
 }
 
 .box6 {
   grid-area: box6;
 }
 
-@media (max-width: 768px) {
+.box7 {
+  grid-area: box7;
+}
+
+.box8 {
+  grid-area: box8;
+}
+
+.box9 {
+  grid-area: box9;
+}
+
+/* Медиа-запросы для мобильных устройств */
+@media (max-width: 500px) {
   .about-container {
-    width: 100%;
-    height: auto;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
-    gap: 10px;
-    padding: 10px;
+    align-items: center; // Центрируем блоки по горизонтали
+    width: 100vw; // Занимает всю ширину экрана
+    height: auto; // Высота определяется содержимым
+    overflow-y: auto; // Позволяет прокручивать блоки
+    padding: 0; // Убираем отступы
+  }
 
-    &__box {
-      height: 100px;
-      width: 100%;
-    }
+  .about-container__box {
+    width: 90vw; // Занимает 90% ширины экрана, оставляя равные отступы
+    height: 80vh; // Занимает 80% высоты экрана
+    margin-bottom: 20px; // Промежуток между блоками
   }
 }
