--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,106 +1,62 @@
 .about {
   min-height: 100vh;
   display: flex;
+  flex-direction: column; // Изменено на column, чтобы меню было ниже основного контента
   justify-content: center;
   align-items: center;
   position: relative;
-}
+  overflow: hidden; // Чтобы скрыть элементы, выходящие за пределы контейнера
 
-.about-container {
-  font-family: Futura, sans-serif;
-  width: 95vw;
-  height: 95vh;
-  display: grid;
-  grid-template-areas:
-    "box1 box2 box2 box2"
-    "box3 box4 box5 box5"
-    "box6 box4 box7 box8"
-    "box6 box9 box7 box8";
-  gap: 20px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding: 20px;
-  z-index: 1;
-  background-color: transparent;
-
-  &__box {
+  &-container {
+    position: relative; // Для корректного позиционирования дочерних элементов
+    display: flex;
+    flex-direction: column; // Выравнивание элементов по вертикали
+    align-items: center; // Центрирование по горизонтали
+    z-index: 1; // Устанавливаем z-index для контейнера
     
-    border-radius: 25px;
-    background-color: #18181825;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-    cursor: pointer;
+
+    &__block {
+      z-index: 2; // На переднем плане
+      padding: 20px; // Отступы
+      backdrop-filter: blur(30px);
+      background: rgba(255, 255, 255, 0.145);
+      border-radius: 25px;
+      color: black;
+      text-align: justify;
+      margin-bottom: 20px; // Отступ снизу
+      max-width: 600px; // Максимальная ширина блока
+    }
+  }
+
+  &-menu {
+    position: fixed; // Фиксированное положение
+    bottom: 50px; // Отступ от нижнего края
+    left: 50%; // Центрирование по горизонтали
+    transform: translateX(-50%); // Центрирование по горизонтали
+    display: flex; // Гибкое расположение элементов
+    align-items: center; // Центрирование логотипа и элементов по вертикали
+    gap: 10px; // Промежуток между элементами
+    z-index: 2; // На переднем плане
+    padding: 15px 15px; // Отступы сверху и снизу
     backdrop-filter: blur(30px);
-    &-img{
-      background: none;
+    background: rgba(255, 255, 255, 0.145);
+    border-radius: 25px;
+    &__logo {
+      width: 50px; // Ширина логотипа
+      height: auto; // Автоматическая высота для сохранения пропорций
+      background: transparent;
+      margin-right: 30px;
     }
-    &:hover {
-      transform: scale(1.02);
+
+    &__item {
+      cursor: pointer; // Указатель при наведении
+      color: #ffffff; // Цвет текста
+      transition: color 0.3s; // Плавный переход при наведении
+      background: transparent;
+      
+      &:hover {
+        color: #609db1; // Цвет текста при наведении
+      }
     }
-  }
-}
-
-.box1 {
-  grid-area: box1;
-  // background: #A5B68D;
-}
-
-.box2 {
-  grid-area: box2;
-  font-weight: 1000;
-  
-}
-
-.box3 {
-  grid-area: box3;
-}
-
-.box4 {
-  grid-area: box4;
-}
-
-.box5 {
-  grid-area: box5;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.box6 {
-  grid-area: box6;
-}
-
-.box7 {
-  grid-area: box7;
-  
-}
-
-.box8 {
-  grid-area: box8;
-}
-
-.box9 {
-  grid-area: box9;
-}
-
-
-@media (max-width: 500px) {
-  .about-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    width: 100vw; 
-    height: auto; 
-    overflow-y: auto; 
-    padding: 0; 
-  }
-
-  .about-container__box {
-    width: 90vw; 
-    height: 80vh; 
-    margin-bottom: 20px; 
   }
 }
