--- a/src/components/portfolio block/Pblock.module.scss
+++ b/src/components/portfolio block/Pblock.module.scss
@@ -3,51 +3,68 @@
     margin: 0 auto; /* Центрируем контейнер */
     padding: 20px; /* Внутренние отступы */
     background: transparent; /* Убираем задний фон */
-  }
   
-  .projects {
-    display: flex; /* Используем flexbox для размещения проектов */
-    flex-direction: column; /* Вертикальное размещение */
-    gap: 20px; /* Промежутки между проектами */
-    background: transparent;
+    h2 {
+        background: transparent;
+      text-align: center; /* Центрируем заголовок */
+    }
   }
   
   .projectCard {
     display: flex; /* Используем flexbox для размещения содержимого карточки */
+    flex-direction: column; /* Вертикальное размещение содержимого карточки */
     padding: 10px; /* Внутренние отступы карточки */
     transition: transform 0.2s; /* Плавный эффект при наведении */
     background: transparent;
-  }
+    align-items: center; /* Центрируем содержимое карточки */
   
-  .projectCard:hover {
-    transform: scale(1.02); /* Увеличение при наведении */
-  }
+    img {
+      border-radius: 25px;
+      width: 100%; /* Уменьшаем размер изображения */
+      height: 100%; /* Автоматическая высота для сохранения пропорций */
+      margin: 10px 0; /* Отступ сверху и снизу от изображения */
+    }
   
-  .projectGif {
-    width: 300px; /* Уменьшаем размер изображения */
-    height: auto; /* Автоматическая высота для сохранения пропорций */
-    margin-right: 20px; /* Отступ справа от изображения */
-  }
+    .projectInfo {
+      text-align: left; /* Центрируем текст */
+      background: transparent;
+      
+      h3 {
+        background-color: transparent;
+        margin: 5px 0; /* Отступы между заголовком и текстом */
+      }
   
-  .projectInfo {
-    flex: 1; /* Занимает оставшееся пространство */
+      p {
+        background-color: transparent;
+        font-size: 14px; /* Уменьшаем размер текста */
+        margin: 5px  0; /* Отступы между строками текста */
+      }
+  
+      .projectStack {
+        background-color: transparent;
+        color: #555; /* Цвет текста стека (серый) */
+        font-size: 12px; /* Уменьшаем размер текста стека */
+      }
+    }
   }
-
   
   .pagination {
     margin-top: 20px; /* Отступ сверху для пагинации */
-    display: flex; /* Используем flexbox для размещения ссылок */
-    justify-content: space-between; /* Распределяем ссылки по краям */
-  }
+    display: flex; /* Используем flex box для размещения кнопок */
+    justify-content: space-between; /* Распределяем кнопки по краям */
+    background: transparent;
+    .paginationButton {
+      cursor: pointer; /* Курсор при наведении */
+      background: transparent;
+      border: none;
+      padding: 0 10px;
+      font-size: 16px;
+      color: #007bff; /* Цвет текста кнопки */
   
-  .paginationLink {
-    color: #007bff; /* Цвет ссылки */
-    cursor: pointer; /* Курсор при наведении */
-    text-decoration: underline; /* Подчеркивание текста */
-  }
-  
-  .paginationLink:hover {
-    color: #0056b3; /* Цвет ссылки при наведении */
+      &:hover {
+        color: #0056b3; /* Цвет текста кнопки при наведении */
+      }
+    }
   }
   
   /* Адаптивные стили */
@@ -58,14 +75,5 @@
   
     .projectsContainer {
       padding: 10px; /* Уменьшаем отступы на маленьких экранах */
-    }
-  
-    .projectCard {
-      flex-direction: column; /* Вертикальное размещение содержимого карточки */
-      align-items: center; /* Центрируем содержимое карточки */
-    }
-  
-    .projectInfo {
-      text-align: center; /* Центрируем текст */
     }
   }
