--- a/src/components/portfolio block/Pblock.module.scss
+++ b/src/components/portfolio block/Pblock.module.scss
@@ -60,10 +60,10 @@
       border: none;
       padding: 0 10px;
       font-size: 16px;
-      color: #007bff; /* Цвет текста кнопки */
+      color: #ffffff; /* Цвет текста кнопки */
   
       &:hover {
-        color: #0056b3; /* Цвет текста кнопки при наведении */
+        color: #609db1; /* Цвет текста кнопки при наведении */
       }
     }
   }
