--- a/src/components/about block/Ablock.module.scss
+++ b/src/components/about block/Ablock.module.scss
@@ -25,3 +25,11 @@
     font-size: 16px;
     text-align: justify;
 }
+@media (max-width: 375px){
+    .text {
+        padding: 10px 0;
+        background-color: transparent;
+        font-size: 12px;
+        text-align: justify;
+    }
+  }
